[gd_scene load_steps=4 format=2]

[ext_resource path="res://autoloads/MusicController.gd" type="Script" id=1]
[ext_resource path="res://src/audio/music/godot_cozy_game_music_level.wav" type="AudioStream" id=2]
[ext_resource path="res://src/audio/music/godot_cozy_game_music_battle.wav" type="AudioStream" id=3]

[node name="MusicController" type="Node"]
script = ExtResource( 1 )

[node name="MusicMainMenu" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="MusicLevel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="MusicBattle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"
